--- a/.gitignore
+++ b/.gitignore
@@ -66,5 +66,6 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
-# Oppai-specific directory
+# Oppai-specific directories
 oppai-env/
+pygame-env/
