--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -18,6 +18,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Analysing the code with pylint
+    - name: Run pylint for errors only
       run: |
-        pylint --extension-pkg-whitelist=pygame $(git ls-files '*.py')
+        pylint --extension-pkg-whitelist=pygame -E $(git ls-files '*.py') 
+    - name: Analyze with Pylint, ignore exit code
+      run: |
+        pylint --extension-pkg-whitelist=pygame $(git ls-files '*.py') || true
