First commit of Javascript rewrite with Vue and Vite, timer, prompts, stat block, user input functional

--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,9 @@ Thumbs.db
 .vuepress/public/
 .vuepress/node_modules/
 
+# Vite specific
+.vite/
+
 # Lint and formatting
 .eslintcache
 .stylelintcache
